# ops-platform

./: .dockerignore  .env.deploy.example  .env.example  .env.smoke.example  .gitignore  Dockerfile  README.md  docker-compose.deploy.yml  docker-compose.smoke.yml  docker-compose.yml  pyproject.toml
.github/workflows/: compose-smoke.yml  deploy-config-validate.yml  timescale-integration.yml
artifacts/: dashboard.html  live_summary.json  summary.json
deploy/: Caddyfile  otel-collector-config.yaml  recurring_pull.example.toml
docs/: ARCHITECTURE.md  BENCHMARK_CASE_STUDY.md  DEPLOYMENT.md  DEPLOY_RUNBOOK.md  PORTFOLIO_COPY.md  TESTBED_V2_CASE_STUDY.md  prometheus_queries.example.toml  real_data_mapping.example.toml
ops_platform/: __init__.py  api.py  benchmarks.py  dashboard.py  decision_engine.py  deploy_bundle.py  deploy_evidence.py  detection.py  feature_builder.py  file_ingestion.py  forecasting.py  incident_engine.py  pipeline.py  planner.py  prometheus_ingestion.py  recurring_pull.py  recurring_worker.py  release_artifacts.py  resilience.py  scenarios.py  schemas.py  security.py  settings.py  simulator.py  storage.py  telemetry.py  testbed.py  timescale_storage.py
scripts/: bootstrap_storage.py  build_artifacts.py  build_release_artifacts.py  capture_deploy_evidence.py  check_deploy_bundle.py  ingest_prometheus.py  ingest_real_data.py  init_timescale.py  prune_storage.py  replay_run.py  run_api.py  run_benchmarks.py  run_demo.py  run_recurring_pull.py  run_recurring_worker.py  serve_dashboard.py  smoke_docker_stack.py
tests/: test_api_runtime.py  test_api_security.py  test_benchmarks.py  test_dashboard_live.py  test_deploy_bundle.py  test_deploy_evidence.py  test_feature_builder.py  test_file_ingestion.py  test_incident_engine.py  test_pipeline.py  test_planner_telemetry.py  test_prometheus_ingestion.py  test_recurring_pull.py  test_recurring_worker.py  test_release_artifacts.py  test_security.py  test_settings.py  test_smoke_docker_stack.py  test_storage_maintenance.py  test_testbed_profiles.py  test_timescale_storage.py
