[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-decision-platform"
version = "0.1.0"
description = "Shadow-mode operational decision layer prototype for distributed systems."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
]
observability = [
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp-proto-http",
]
planner = [
  "ortools",
]
timeseries = [
  "psycopg[binary]",
]
full = [
  "fastapi>=0.116.0",
  "uvicorn>=0.35.0",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "opentelemetry-exporter-otlp-proto-http",
  "ortools",
  "psycopg[binary]",
]

[tool.setuptools.packages.find]
include = ["ops_platform*"]
